fixed spacing on certification section

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -393,7 +393,7 @@
     display: block;
     margin: 0px;
     padding: 50px;
-    padding-left: 115px;
+    padding-right: 115px;
     h3 {
         color: #c9a0dc;
     }
